# tesseract_python

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  dependencies.rosinstall  package.xml
src/tesseract/: __init__.py
swig/: __init__.py  eigen.i  eigen_types.i  geometry_loaders.h  geometry_loaders.i  json_typemaps.i  shared_factory.i  tesseract_python.i
swig/ros/: rosmsg_typemaps.i  tesseract_ros_python.i
swig/ros/tesseract_rosutils/: utils.i
swig/tesseract/: forward_kinematics_manager.i  inverse_kinematics_manager.i  tesseract.i
swig/tesseract_collision/: continuous_contact_manager.i  continuous_contact_manager_factory.i  discrete_contact_manager.i  discrete_contact_manager_factory.i  types.i
swig/tesseract_common/: resource.i  status_code.i  types.i
swig/tesseract_environment/core/: commands.i  environment.i  state_solver.i  types.i
swig/tesseract_geometry/: geometries.i  geometry.i  utils.i
swig/tesseract_geometry/impl/: box.i  capsule.i  cone.i  convex_mesh.i  cylinder.i  mesh.i  octree.i  plane.i  sdf_mesh.i  sphere.i
swig/tesseract_kinematics/core/: forward_kinematics.i  forward_kinematics_factory.i  inverse_kinematics.i  inverse_kinematics_factory.i
swig/tesseract_planning/tesseract_motion_planners/core/: planner.i  types.i  utils.i  waypoint.i
swig/tesseract_planning/tesseract_motion_planners/trajopt/: trajopt_motion_planner.i
swig/tesseract_planning/tesseract_motion_planners/trajopt/config/: trajopt_planner_config.i  trajopt_planner_default_config.i
swig/tesseract_scene_graph/: allowed_collision_matrix.i  graph.i  joint.i  link.i  resource_locator.i
swig/tesseract_visualization/: visualization.i
swig/trajopt/: problem_description.i
tests/: test_environment.py
